--- a/wiki/DatabaseConnection.wiki
+++ b/wiki/DatabaseConnection.wiki
@@ -23,13 +23,13 @@ $db2 = new edb('resource.com','user','pa$$','dbname2');
 
 
 
-To access database connection You can use:
+To access database connection You can use: $db->connection;
 
 {{{
 <?
 
 $db = new edb($db_data);
-$db->connection;
+
 
 
 $query = mysql_query("select * from example", $db->connection);
